<resources>
    <string name="app_name">BitCoinPortFolio</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>


    <string name="tv_dashboard">DashBoard</string>
    <string name="tv_rate_graph">Rate Graph</string>
    <string name="tv_graph_name_is">Graph Name : </string>
    <string name="tv_graph_unit_is">Graph Unit Used : </string>
    <string name="tv_graph_description_is">Description : </string>
    <string name="tv_bitcoin_portfolio">BitCoin PortFolio</string>
    <string name="tv_usd_btc">USD / BTC</string>
    <string name="tv_investment_history">Transaction History</string>
    <string name="tv_add_investment">Add Investment</string>
    <string name="tv_save">Save</string>
    <string name="tv_trading_pair">Trading Pair</string>
    <string name="tv_current_price">Amount</string>
    <string name="tv_enter_quantity">Enter Rate</string>
    <string name="tv_total_value">Total Value</string>
    <string name="tv_trading_date">Trade date</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_user_total_investment">Total investment</string>

</resources>
