<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstproject.amit.bitcoinportfolio.activity.AddInvestMentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_investment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:shadowColor="@color/colorGrayLight"
                android:text="@string/tv_add_investment"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_twenty_five"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/tv_save"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_twenty_five"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/sv_investment_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_investment_toolbar">

        <RelativeLayout
            android:id="@+id/rl_investment_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_fifteen">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_trading_pair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/ll_trading_pair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_ten"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rl_trading_pair"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_trading_pair"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tv_trading_pair"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_trading_pair_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/tv_usd_btc"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="normal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorLightBlack" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_buy_or_sell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_ten">

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="fill_horizontal"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_buy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/buy"
                                android:textColor="@color/cardview_dark_background"
                                android:textSize="@dimen/sp_twenty_five"
                                android:textStyle="normal" />

                            <RadioButton
                                android:id="@+id/radio_sell"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/sell"
                                android:textColor="@color/cardview_dark_background"
                                android:textSize="@dimen/sp_twenty_five"
                                android:textStyle="normal" />
                        </RadioGroup>
                        <!--<View-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="1dp"-->
                            <!--android:layout_alignParentBottom="true"-->
                            <!--android:background="@color/colorLightBlack" />-->
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_price_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_trading_pair"
                android:layout_marginTop="@dimen/dp_twenty"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/ll_price_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_ten"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rl_price_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_current_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tv_current_price"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="normal" />
                        <EditText
                            android:id="@+id/tv_current_price_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:hint="@string/tv_current_price"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty"
                            android:textStyle="normal" />
                        <!--<TextView-->
                            <!--android:id="@+id/tv_dollar"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_alignLeft="@id/tv_current_price_value"-->
                            <!--android:text="$"-->
                            <!--android:textColor="@color/cardview_dark_background"-->
                            <!--android:textSize="@dimen/sp_twenty_five"-->
                            <!--android:textStyle="normal" />-->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorLightBlack" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_ten">

                        <TextView
                            android:id="@+id/tv_enter_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tv_enter_quantity"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="normal" />

                        <EditText
                            android:id="@+id/edt_enter_quantity_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:hint="@string/tv_enter_quantity"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_fifteen"
                            android:textStyle="normal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorLightBlack" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/rl_total_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_ten">

                        <TextView
                            android:id="@+id/tv_total_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tv_total_value"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/tv_total_value_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"

                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="normal" />

                        <!--<View-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="1dp"-->
                            <!--android:layout_alignParentBottom="true"-->
                            <!--android:background="@color/colorLightBlack" />-->
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_investment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_price_view"
                android:layout_marginTop="@dimen/dp_twenty"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/ll_investment_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_ten"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rl_investment_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_trading_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tv_trading_date"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_trading_date_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="@dimen/sp_twenty_five"
                            android:textStyle="normal" />

                        <!--<View-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="1dp"-->
                            <!--android:layout_alignParentBottom="true"-->
                            <!--android:background="@color/colorLightBlack" />-->
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
